# nextjs-boilerplate

./: .env.local.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.cloudflared/: config.yml
.devcontainer/: devcontainer.json
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/chat/: page.tsx
backend/: Dockerfile  main.py  pyproject.toml
components/: ChatRoom.tsx  DailyQuote.test.tsx  DailyQuote.tsx
data/: quotes.test.ts  quotes.ts
lib/supabase/: client.ts
